fix hugo 补充 paseofyou/paseofyou.github.io@b86654c487bb2c3c6847eb510f0362265bd4938a

--- a/p/hugo博客搭建/index.html
+++ b/p/hugo博客搭建/index.html
@@ -469,6 +469,7 @@
 <li>返回到博客项目，在项目的设置找到 Secrets and variables，里面的 action secrets 中，设置 secrets：
 <code>PERSONAL_TOKEN</code>，密码为上面的令牌密钥。</li>
 <li>在项目设置中找到rules，新建分支rule ，<strong>记得启用</strong>，把当前分支允许操作别的分支权限给打开。</li>
+<li>在项目设置的 page 中，将 source 改为 github actions 即可</li>
 </ul>
 <p>部署环节：</p>
 <p>我这里研究了一下 github ci，你可以根据我的github ci 配置来自行修改。</p>
